fix: update dark mode

--- a/src/assets/scss/element-ui-reset.scss
+++ b/src/assets/scss/element-ui-reset.scss
@@ -11,14 +11,43 @@ $--color-danger: $color-error;
 
 @import "~element-ui/packages/theme-chalk/src/index";
 
-.el-loading-mask {
-  background-color: var(--color-toast-bg) !important;
+.el-card,
+.el-dropdown,
+.el-table,
+.el-breadcrumb__inner,
+.el-form-item__label,
+.el-dialog__title,
+.el-select-dropdown__item {
+  color: var(--color-text) !important;
 }
 
+.el-dialog,
+.el-loading-mask,
+.el-card,
+.el-tree,
+.el-input__inner,
+.el-submenu.is-active > .el-submenu__title,
+.el-menu-item.is-active,
+.el-menu-item:hover,
+.el-menu-item:focus,
+.el-submenu__title:hover,
+.el-table--group::after,
+.el-table--border::after,
+.el-table::before,
+.el-table--enable-row-hover .el-table__body tr:hover > td,
+.el-select-dropdown,
+.el-select-dropdown__item.hover,
+.el-select-dropdown__item:hover {
+  background-color: var(--color-background-content) !important;
+}
+
+.el-dialog__wrapper .el-dialog__header {
+  border-color: var(--color-border) !important;
+}
+
+
 .el-card {
-  background-color: var(--color-background-content);
   border-color: var(--color-border);
-  color: var(--color-text);
 
   .el-card__header {
     border-color: var(--color-border);
@@ -26,8 +55,6 @@ $--color-danger: $color-error;
 }
 
 .el-tree {
-  background-color: var(--color-background-content) !important;
-
   .el-tree-node.is-current > .el-tree-node__content,
   .el-tree-node__content:hover {
     background-color: var(--color-background) !important;
@@ -35,7 +62,6 @@ $--color-danger: $color-error;
 }
 
 .el-input__inner {
-  background-color: var(--color-input-bg) !important;
   border-color: var(--color-border);
   color: var(--content-color);
 
@@ -66,15 +92,6 @@ $--color-danger: $color-error;
     }
   }
 }
-.el-submenu.is-active > .el-submenu__title,
-.el-menu-item.is-active {
-  background-color: var(--color-background);
-}
-.el-menu-item:hover,
-.el-menu-item:focus,
-.el-submenu__title:hover {
-  background-color: var(--color-background);
-}
 .el-submenu [class^="el-icon-"],
 .el-submenu [class^="x-icon-"] {
   vertical-align: middle;
@@ -98,9 +115,6 @@ $--color-danger: $color-error;
 }
 
 // 表格
-.el-table {
-  color: var(--color-text);
-}
 .el-table,
 .el-table tr,
 .el-table th {
@@ -112,21 +126,6 @@ $--color-danger: $color-error;
 .el-table th,
 .el-table td {
   border-color: var(--color-border) !important;
-}
-
-.el-table--group::after,
-.el-table--border::after,
-.el-table::before {
-  background-color: var(--color-border);
-}
-
-.el-table--enable-row-hover .el-table__body tr:hover > td {
-  background-color: var(--color-background);
-}
-
-// 面包屑导航
-.el-breadcrumb__inner {
-  color: var(--color-text) !important;
 }
 
 // 消息提示组件
@@ -204,20 +203,12 @@ $--color-danger: $color-error;
 }
 
 .el-select-dropdown {
-  background-color: var(--color-background-content);
   border-color: var(--color-border);
-}
-.el-select-dropdown__item.hover,
-.el-select-dropdown__item:hover {
-  background-color: var(--color-background);
 }
 
 .el-popper[x-placement^="bottom"] .popper__arrow::after,
 .el-popper[x-placement^="bottom"] .popper__arrow {
   border-bottom-color: var(--color-border);
-}
-.el-dropdown {
-  color: var(--color-text);
 }
 .el-dropdown-menu {
   background-color: var(--color-background-content);
